feat: check answers in quiz